// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User snapshot a user menu with logined 1`] = `
<div>
  <div
    class="dropdown dropdown-end"
  >
    <label
      class="hidden sm:block normal-case"
      tabindex="0"
    >
      <div
        class="animate-pulse w-20 mr-4 h-2 bg-slate-700 rounded"
      />
    </label>
    <label
      class="btn btn-ghost btn-circle avatar sm:hidden"
      tabindex="0"
    >
      <div
        class="w-6 rounded-full"
      >
        <svg
          class="animate-spin w-6 h-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
    <ul
      class="menu menu-compact dropdown-content shadow bg-base-300 rounded-box w-52 mt-3 p-2 sm:mt-4 sm:p-0"
      tabindex="0"
    >
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Profile
          </span>
        </a>
      </li>
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Settings
          </span>
        </a>
      </li>
      <li>
        <button>
          Sign out
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`User snapshot a user menu without logined 1`] = `
<div>
  <div
    class="dropdown dropdown-end"
  >
    <label
      class="hidden sm:block normal-case"
      tabindex="0"
    >
      <a
        class="btn btn-link btn-xs"
        href="/#"
      >
        Sign in / Sign up
      </a>
    </label>
    <label
      class="btn btn-ghost btn-circle avatar sm:hidden"
      tabindex="0"
    >
      <div
        class="w-6 rounded-full"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
    <ul
      class="menu menu-compact dropdown-content shadow bg-base-300 rounded-box w-52 mt-3 p-2 sm:mt-4 sm:p-0"
      tabindex="0"
    >
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Profile
          </span>
        </a>
      </li>
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Settings
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`User with abnormal state snapshot user menu is loading 1`] = `
<div>
  <div
    class="dropdown dropdown-end"
  >
    <label
      class="hidden sm:block normal-case"
      tabindex="0"
    >
      <div
        class="animate-pulse w-20 mr-4 h-2 bg-slate-700 rounded"
      />
    </label>
    <label
      class="btn btn-ghost btn-circle avatar sm:hidden"
      tabindex="0"
    >
      <div
        class="w-6 rounded-full"
      >
        <svg
          class="animate-spin w-6 h-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
    <ul
      class="menu menu-compact dropdown-content shadow bg-base-300 rounded-box w-52 mt-3 p-2 sm:mt-4 sm:p-0"
      tabindex="0"
    >
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Profile
          </span>
        </a>
      </li>
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Settings
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`User with abnormal state snapshot user menu when error occurred 1`] = `
<div>
  <div
    class="dropdown dropdown-end"
  >
    <label
      class="hidden sm:block normal-case"
      tabindex="0"
    >
      <div
        class="animate-pulse w-20 mr-4 h-2 bg-slate-700 rounded"
      />
    </label>
    <label
      class="btn btn-ghost btn-circle avatar sm:hidden"
      tabindex="0"
    >
      <div
        class="w-6 rounded-full"
      >
        <svg
          class="animate-spin w-6 h-6"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </label>
    <ul
      class="menu menu-compact dropdown-content shadow bg-base-300 rounded-box w-52 mt-3 p-2 sm:mt-4 sm:p-0"
      tabindex="0"
    >
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Profile
          </span>
        </a>
      </li>
      <li>
        <a
          class="justify-between"
          href="/#"
        >
          <span>
            Settings
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
